static/css/styles.css
/* ... */
.section-heading {
    padding: 1.5% 0% 1.2% 0%;
    text-align: center;
    font-size: 1.5rem;
}
.title-workshop-study-materials {
    display:none;
    padding:0.5% 2%;
    font-size: 1.5rem;
}

.quiz-btn {
    display:block;
    color:white;
    width:20%;
    padding:0.5% 1%;
    margin: 0% 0% 2% 0%;
}
.quiz-btn:hover {
    background:#3D2C00;
}
.quiz {
    display: flex;
    justify-content: center;
}
.quiz form {
    width: 60%;
    display: none;
    background: #FFDBDB;
    padding: 2% 5%;
    margin-bottom: 1.5%;
}
.quiz form p {
    text-align:center;
}
.quiz form div {
    display:flex;
    justify-content:center;
}
.quiz form input {
    width:10%;
    background: #be9292;
    border:2px solid #644A07;
    color: white;
    font-weight: 600;
}
.quiz form input:hover {
    color:white;
}
.quiz form label {
    font-size: 1rem;
}
#number-questions {
    display: none;
}
#number-submit {
    display: none;
}
#no-questions-label {
    display: none;
}
#next {
    display:none;
}
#quiz-btn1, #quiz-btn2, #quiz-btn3, #quiz-btn4, #quiz-btn5 {
    display:none;
}
#start-quiz {
    display:none;
    margin:1% 0%;
}
.quiz-close-reset-btn {
    display:flex;
    justify-content:left;
}
.quiz-close-reset-btn a {
    text-decoration:none;
    text-align:left;
    color:white;width:100%;
    margin: 0% 5%;
    padding:1% 20% 1% 20%;
    font-size: 1rem;
}
#logged-in-text {
    display:none;
}
#not-logged-in-text {
    display:none;
}
#log-in-alert {
    display:none;
}
#log-in-btn {
    display:none;
}
#start-quiz {
    text-decoration:none;
    width:20%;
    text-align:center;
    padding:1%;
    color:white;
}
#quiz h3 {
    width:100%;
    text-align:center;
    padding-top:3%;
    font-size: 1.5rem;
}
#quiz {
    justify-content:center;
    flex-direction:column;
    align-content:center;
}
#quiz-select-div {
    display:flex;
    flex-direction:column;
    align-items:center;
    width:100%;
    font-size: 0.9rem;
}
#quiz-select-div input {
    padding:0.2% 0%;
    width: 25%;
    margin-top:0.5%;
}
#quiz-select-div input::placeholder {
    font-size: 0.9rem;
    font-weight: 300;
}
#quiz-select-item-box {
    display:flex;
    justify-content:center;
    width: 60%;
}
#quiz p {
    font-size:1rem;
}
#quiz-category, #no-question {
    width: 50%;
    text-align:center;
}
#number-submit {
    color:white;
    font-size:0.9rem;
    text-decoration:none;
    text-align:center;
    width:10%;
}
#start-quiz {
    font-size:1.2rem;
    padding: 1% 1%;
}
#q {
    display:none;
    font-size: 1.3rem;
}
#oa, #ob, #oc, #od, #e {
    display:none;
}
#test {
    display:none;
}
#final-score {
    display:none;
}
#result {
    display:none;
}
#next-quiz {
    text-decoration: none;
    color: white;
    width: 20%;
    padding: 1% 0%;
    font-size: 1.3rem;
}
#next-quiz-btn {
    display: none;
}
.title h1 {
    text-align: center;
    font-size: 2rem;
}
.title p {
    color: white;
    text-align:center;
    font-size:1rem;
}
.video-wrapper-container p {
    font-size: 1rem;
}
.upcoming-ws-btn {
    font-size:0.9rem;
}
.feedback_inner {
    background:#FFC6C6;
    width: 100%;
    display:flex;
    padding:1%;
}
.ws-feedback, .topic-feedback {
    display:flex;
    flex-direction: column;
    align-items:center;
    justify-content:center;
    width:50%;
    border:solid 0.2rem #644A07;
    padding:2%;
    margin: 1%;
}
.default-input {
    background:rgba(0, 0, 0, 0.3);
    color: white;
}
.feedback-container {
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content:center;
    align-items:center;
}
#ws-feedback-form p, #topic-feedback-form p {
    display:none;
}

.purchase-credits {
    display:none;
    width:100%;
    justify-content:center;
    padding-top:2%;
}
#know-more-ws-feedback, #know-more-topic-feedback {
    display: none;
}
#read-less-ws-btn, #read-less-topic-btn {
    display: none;
}
#credit-expiry-label {
    display:none;
}

/* ------------------------------------------------------------- PORTRAITS ------------------------------------------ */

.painting-gallery {
    display: flex;
    justify-content: center;
    padding: 2%;
    flex-wrap: wrap;
    background: #0F0F0F;
}
.painting-box-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 300px;
    height: 350px;
    margin: 20px 10px;
    transition: transform .4s;
    cursor: pointer;
}
.painting-box-container p {
    text-decoration: none;
}
.painting-box-container:hover {
    transform: scale(1.05);
}
.painting-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 300px;
    height: 300px;
    background: #A3A3A3;
    position: relative;
}

.painting-box img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

.full-size-portrait {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
}
.full-width-portrait {
    max-height: 90vh;
    object-fit: contain;
    max-width: 100%;
}
.full-width-div-row-narrow {
    display: flex;
    width: 50%;
    padding: 1% 2%;
}
.half-width-paragraph {
    width: 50%;
}
.portrait-main-details {
    width: 50%;
}

.portrait-btn {
    width: 20%;
    background: #85133D;
    padding: .5%;
    color: white;
    margin: 1%;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
}
.portrait-btn:hover {
    color: white;
    text-decoration: none;
    background: #4F0621;
}
.slideshow-btn {
    width: 20%;
    background: #B32451;
    padding: .5%;
    color: white;
    margin: 1%;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
    font-size: 1.2rem;
    text-align: center;
}
.slideshow-btn:hover {
    color: white;
    text-decoration: none;
    background: #BA6016;
}
.slideshow_box {
    height: 80vh;
}
/* ... */

